_Source/force-app/main/default/objects/BI_One_on_One__c/BI_One_on_One__c.object-meta.xml
<CustomObject>
    <label>One-on-One</label>
    <nameField>
        <label>One-on-One Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One-on-Ones</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>