_Source/force-app/main/default/objects/BI_One_on_One__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>