_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>