_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Logged_In_Owner_One_on_One__c.field-meta.xml
<CustomField>
    <fullName>BI_Logged_In_Owner_One_on_One__c</fullName>
    <formula>IF( Owner:User.Id = $User.Id, 1, 0)</formula>
    <label>Logged In Owner One-on-One</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>