_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Logged_In_Participant_One_on_One_del__c.field-meta.xml
<CustomField>
    <fullName>BI_Logged_In_Participant_One_on_One_del__c</fullName>
    <formula>IF( BI_Participant__r.Id =  $User.Id, 1, 0)</formula>
    <label>Logged In Participant One-on-One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>