_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>BI_Logged_In_User__c</fullName>
    <formula>$User.Id</formula>
    <label>Logged In User</label>
    <type>Text</type>
</CustomField>