_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_ID__c</fullName>
    <formula>Owner:User.Id</formula>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>