_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Part_of_My_Team__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_My_Team__c</fullName>
    <formula>IF ( OR($User.Id = Owner:User.Id, $User.Id = Owner:User.ManagerId, $User.Id = Owner:User.Manager.ManagerId,$User.Id = Owner:User.Manager.Manager.ManagerId, $User.Id = Owner:User.Manager.Manager.Manager.ManagerId ,$User.Id = Owner:User.Manager.Manager.Manager.Manager.ManagerId ,$User.Id = Owner:User.Manager.Manager.Manager.Manager.Manager.ManagerId) , TRUE, FALSE)</formula>
    <label>Part of My Team</label>
    <type>Checkbox</type>
</CustomField>