_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Participant__c.field-meta.xml
<CustomField>
    <fullName>BI_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OwnerOne_on_Ones</relationshipName>
    <type>Lookup</type>
</CustomField>