_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Participant_ID__c</fullName>
    <formula>BI_Participant__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant ID</label>
    <type>Text</type>
</CustomField>