_Source/force-app/main/default/objects/BI_One_on_One__c/fields/BI_Re_Scheduled_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>BI_Re_Scheduled_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you created a one-on-one, but never completed it because it was cancelled or re-scheduled, checking this box will help to exclude such one-on-ones from reports</inlineHelpText>
    <label>Re-Scheduled / Cancelled</label>
    <type>Checkbox</type>
</CustomField>