_Source/force-app/main/default/objects/BI_One_on_One__c/listViews/My_One_on_Ones_ALL.listView-meta.xml
<ListView>
    <fullName>My_One_on_Ones_ALL</fullName>
    <booleanFilter>3 AND (1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>BI_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BI_Participant__c</columns>
    <columns>Agenda__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Logged_In_Owner_One_on_One__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BI_Logged_In_Participant_One_on_One_del__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BI_Re_Scheduled_Cancelled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>00 - My One-on-Ones - ALL</label>
</ListView>